# otel_broccoli

./: .gitignore  Cargo.toml  README.md  run_dev_watch.sh  run_expand_nightly.sh
.github/workflows/: rust.yml
config/default/: config.toml  loggers.toml
doc/: use_case.md
src/: augmentation.rs  config.rs  main.rs
tests/: stdout_test.toml
